frontend/general/all.css
/* Lia */
main {
    padding: 4ch;
    margin: auto;
    
    width: fit-content;
    height: fit-content;
    max-height: 100%;
    
    position: absolute;
    top:0;
    bottom:0;
    left:0;
    right:0;
    font-family: Arial, Helvetica, sans-serif;
}

.easyform {
    display: grid;grid-template-columns: max-content max-content;gap: 1ch;
}

h1 {
    text-align: center;
}

.baureihen {
    text-align: center;
    list-style-type: none;
}

.baureihen > li {
    margin: 0.25ch;
    border: 1px solid black;
    padding: 0.125ch;
}

.baureihen > li > a {
    text-decoration: none;
    color: black;
}

.back {
    position: absolute;
    left: 1ch;
    top: 1ch;
}

.errorMessage {
    position: absolute;
    bottom: 1ch;
    left: 1ch;
    right: 1ch;
    padding: 2ch;
    background-color: lightcoral;
}

button {
    cursor: pointer;
}

